Fixed NavBar alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
   font-size: 22px;
   color: #fff;
   font-weight: 600;
-  transition: 0.3s ease;
+  transition: 0.2s ease;
   transition-delay: 0.1s;
 }
 .sidebar.close .logo-details .logo_name{
@@ -63,18 +63,19 @@
 .sidebar .nav-links li:hover{
   background: #383838;
 }
-.sidebar .nav-links li .iocn-link{
+.sidebar .nav-links li .icon-link{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.sidebar.close .nav-links li .iocn-link{
-  display: block
+.sidebar.close .nav-links li .icon-link{
+  /* justify-content: flex-start; */
 }
 .sidebar .nav-links li i{
   height: 50px;
-  min-width: 78px;
+  /* min-width: 78px; */
   text-align: center;
+  margin: 0px 10px 0px 10px;
   line-height: 50px;
   color: #fff;
   font-size: 20px;
@@ -85,7 +86,7 @@
   transform: rotate(-180deg);
 }
 .sidebar.close .nav-links i.arrow{
-  display: none;
+  opacity: 0;
 }
 .sidebar .nav-links li a{
   display: flex;
@@ -159,54 +160,6 @@
   top: 50%;
   transform: translateY(-50%);
 }
-.sidebar .profile-details{
-  position: fixed;
-  bottom: 0;
-  width: 260px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #181818;
-  padding: 12px 0;
-  transition: all 0.5s ease;
-}
-.sidebar.close .profile-details{
-  background: none;
-}
-.sidebar.close .profile-details{
-  width: 78px;
-}
-.sidebar .profile-details .profile-content{
-  display: flex;
-  align-items: center;
-}
-.sidebar .profile-details img{
-  height: 52px;
-  width: 52px;
-  object-fit: cover;
-  border-radius: 16px;
-  margin: 0 14px 0 12px;
-  background: #1d1b31;
-  transition: all 0.5s ease;
-}
-.sidebar.close .profile-details img{
-  padding: 10px;
-}
-.sidebar .profile-details .profile_name,
-.sidebar .profile-details .job{
-  color: #fff;
-  font-size: 18px;
-  font-weight: 500;
-  white-space: nowrap;
-}
-.sidebar.close .profile-details i,
-.sidebar.close .profile-details .profile_name,
-.sidebar.close .profile-details .job{
-  display: none;
-}
-.sidebar .profile-details .job{
-  font-size: 12px;
-}
 .home-section{
   position: relative;
   background: #E4E9F7;
@@ -236,26 +189,6 @@
 .home-section .home-content .text{
   font-size: 26px;
   font-weight: 600;
-}
-@media (max-width: 400px) {
-  .sidebar.close .nav-links li .sub-menu{
-    display: none;
-  }
-  .sidebar{
-    width: 78px;
-  }
-  .sidebar.close{
-    width: 0;
-  }
-  .home-section{
-    left: 78px;
-    width: calc(100% - 78px);
-    z-index: 100;
-  }
-  .sidebar.close ~ .home-section{
-    width: 100%;
-    left: 0;
-  }
 }
 
 .switch {
@@ -307,4 +240,12 @@ input:checked + .slider:before {
   -webkit-transform: translateX(13px);
   -ms-transform: translateX(13px);
   transform: translateX(13px);
+}
+
+.barGroup {
+  cursor: pointer;
+}
+
+.category-radio {
+  margin: 5px;
 }
